fix: docs topic text alignment

--- a/src/components/DocsNavigation/index.module.scss
+++ b/src/components/DocsNavigation/index.module.scss
@@ -108,6 +108,7 @@
   @include btnReset;
   font-size: 16px;
   text-decoration: none;
+  text-align: left;
   color: var(--theme-elevation-600);
   cursor: pointer;
   display: flex;
